<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTitulo"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <EditText
        android:id="@+id/etNumero1"
        android:layout_width="310dp"
        android:layout_height="49dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="Ingrese un numero"
        android:inputType="numberDecimal"
        android:text="@string/etNumero1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <EditText
        android:id="@+id/etNumero2"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Ingrese un numero"
        android:inputType="numberDecimal"
        android:text="@string/etNumero2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumero1" />

    <TextView
        android:id="@+id/tvResultadoOpera"
        android:layout_width="230dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvResultadoOpera"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbSignos" />

    <TableLayout
        android:id="@+id/tbSignos"
        android:layout_width="128dp"
        android:layout_height="134dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumero2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnSuma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/mas"
                android:backgroundTint="#00FFFFFF"
                android:onClick="suma"
                app:srcCompat="@mipmap/mas" />

            <ImageButton
                android:id="@+id/btnMultiplicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/multiplicacion"
                android:backgroundTint="#00FFFFFF"
                android:onClick="multiplicacion"
                app:srcCompat="@mipmap/multiplicacion" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnResta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/menos"
                android:backgroundTint="#00FFFFFF"
                android:onClick="resta"
                app:srcCompat="@mipmap/menos" />

            <ImageButton
                android:id="@+id/btnDivision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/division"
                android:backgroundTint="#00FFFFFF"
                android:onClick="division"
                app:srcCompat="@mipmap/division" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="borrar"
        android:text="@string/btnBorrar"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultadoOpera" />

</androidx.constraintlayout.widget.ConstraintLayout>